cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(cppcon LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED 1)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include(cmake/CppCon19Find.cmake)
find_package(Catch2)
include(GNUInstallDirs)
if(Catch2_FOUND)
  find_package(Threads REQUIRED)
  enable_testing()
endif()
include(cmake/Functions.cmake)
add_subdirectory(src)
